tests/NormalTests/paczka1/fuzzy1/17858118.err
Error in line 10: MfB9Wd A515 -2,6
Error in line 12: 4D0y1u A926 156,82
Error in line 7: MfB9Wd A515 70,5
Error in line 19: h3R18VsLv0 A926 -2,5
Error in line 1: h3R18VsLv0 A926 36,4
Error in line 22: oLse A926 19,6
Error in line 27: h3R18VsLv0 A926 10,2
Error in line 33: NchCF4v1 S28 -1,4
Error in line 31: A926 S28 81,2
Error in line 8: 4D0y1u A926 85,8
